--- a/index.html
+++ b/index.html
@@ -55,7 +55,85 @@
 <body>
   
   
- PASTE HERE 
+ SECTION A-
+
+  Here are the answers to each of your questions clearly and concisely:
+
+⸻
+
+Q1: List all the substrings of length 4 for the string "Manipal"
+
+The string "Manipal" has 7 characters. Substrings of length 4 are all possible consecutive 4-character sequences:
+	•	Mani (positions 0–3)
+	•	anip (1–4)
+	•	nipa (2–5)
+	•	ipal (3–6)
+
+✅ Answer: Mani, anip, nipa, ipal
+
+⸻
+
+Q2: List the two Finite machines with output
+
+There are two types of Finite State Machines (FSMs) with output:
+	1.	Moore Machine:
+Output depends only on the current state.
+🔹 Output is associated with states.
+	2.	Mealy Machine:
+Output depends on the current state and the input.
+🔹 Output is associated with transitions.
+
+✅ Answer: Moore Machine and Mealy Machine
+
+⸻
+
+Q3: Define the smallest language by stating its cardinality as the largest language is
+
+Let’s clarify:
+	•	Smallest language: A language with no strings.
+👉 Denoted as ∅ (empty set).
+🔸 Cardinality = 0
+	•	Largest language over an alphabet Σ:
+👉 The set of all possible strings, i.e., Σ*
+🔸 This is countably infinite (∞)
+
+✅ Answer:
+The smallest language is the empty set (∅), with cardinality 0.
+
+⸻
+
+Q4: Define Pumping Lemma for CFG
+
+The Pumping Lemma for Context-Free Grammars (CFGs) is used to prove that certain languages are not context-free.
+
+Statement:
+For any context-free language L, there exists a number p (pumping length) such that for any string s \in L, with |s| \ge p, we can write
+s = uvwxy
+such that:
+	1.	|vwx| \le p
+	2.	vx \ne \varepsilon
+	3.	For all i \ge 0, u v^i w x^i y \in L
+
+✅ Use: To disprove that a language is context-free by showing that no such decomposition exists.
+
+⸻
+
+Q5: List all types of Grammar used in Automata
+
+Grammars in automata theory are classified using the Chomsky Hierarchy:
+
+Type	Grammar Name	Language Class	Machine Equivalent
+Type 0	Unrestricted Grammar	Recursively enumerable	Turing Machine
+Type 1	Context-Sensitive Grammar	Context-sensitive	Linear Bounded Automaton
+Type 2	Context-Free Grammar	Context-free	Pushdown Automaton
+Type 3	Regular Grammar	Regular	Finite Automaton
+
+✅ Answer:
+	•	Type 0: Unrestricted
+	•	Type 1: Context-Sensitive
+	•	Type 2: Context-Free
+	•	Type 3: Regular
+
 
   
   </body>
