--- a/index.html
+++ b/index.html
@@ -55,86 +55,89 @@
 <body>
   
   
- SECTION A-
-
-  Here are the answers to each of your questions clearly and concisely:
-
-⸻
-
-Q1: List all the substrings of length 4 for the string "Manipal"
-
-The string "Manipal" has 7 characters. Substrings of length 4 are all possible consecutive 4-character sequences:
-	•	Mani (positions 0–3)
-	•	anip (1–4)
-	•	nipa (2–5)
-	•	ipal (3–6)
-
-✅ Answer: Mani, anip, nipa, ipal
-
-⸻
-
-Q2: List the two Finite machines with output
-
-There are two types of Finite State Machines (FSMs) with output:
-	1.	Moore Machine:
-Output depends only on the current state.
-🔹 Output is associated with states.
-	2.	Mealy Machine:
-Output depends on the current state and the input.
-🔹 Output is associated with transitions.
-
-✅ Answer: Moore Machine and Mealy Machine
-
-⸻
-
-Q3: Define the smallest language by stating its cardinality as the largest language is
-
-Let’s clarify:
-	•	Smallest language: A language with no strings.
-👉 Denoted as ∅ (empty set).
-🔸 Cardinality = 0
-	•	Largest language over an alphabet Σ:
-👉 The set of all possible strings, i.e., Σ*
-🔸 This is countably infinite (∞)
-
-✅ Answer:
-The smallest language is the empty set (∅), with cardinality 0.
-
-⸻
-
-Q4: Define Pumping Lemma for CFG
-
-The Pumping Lemma for Context-Free Grammars (CFGs) is used to prove that certain languages are not context-free.
-
-Statement:
-For any context-free language L, there exists a number p (pumping length) such that for any string s \in L, with |s| \ge p, we can write
-s = uvwxy
-such that:
-	1.	|vwx| \le p
-	2.	vx \ne \varepsilon
-	3.	For all i \ge 0, u v^i w x^i y \in L
-
-✅ Use: To disprove that a language is context-free by showing that no such decomposition exists.
-
-⸻
-
-Q5: List all types of Grammar used in Automata
-
-Grammars in automata theory are classified using the Chomsky Hierarchy:
-
-Type	Grammar Name	Language Class	Machine Equivalent
-Type 0	Unrestricted Grammar	Recursively enumerable	Turing Machine
-Type 1	Context-Sensitive Grammar	Context-sensitive	Linear Bounded Automaton
-Type 2	Context-Free Grammar	Context-free	Pushdown Automaton
-Type 3	Regular Grammar	Regular	Finite Automaton
-
-✅ Answer:
-	•	Type 0: Unrestricted
-	•	Type 1: Context-Sensitive
-	•	Type 2: Context-Free
-	•	Type 3: Regular
 
 
+    <h2>Q1: List all the Substrings of Length 4 for String "Manipal"</h2>
+    <p>The string <code>"Manipal"</code> has 7 characters. The substrings of length 4 are:</p>
+    <ul>
+        <li>Mani</li>
+        <li>anip</li>
+        <li>nipa</li>
+        <li>ipal</li>
+    </ul>
+
+    <h2>Q2: List the Two Finite Machines with Output</h2>
+    <ul>
+        <li><strong>Moore Machine:</strong> Output depends only on the current state. Output is associated with states.</li>
+        <li><strong>Mealy Machine:</strong> Output depends on the current state and the input. Output is associated with transitions.</li>
+    </ul>
+
+    <h2>Q3: Define the Smallest Language by Stating its Cardinality</h2>
+    <p>
+        The smallest language is the <strong>empty set (∅)</strong> which contains no strings.
+        <br>
+        <strong>Cardinality:</strong> 0
+    </p>
+    <p>
+        The largest language over an alphabet Σ is <code>Σ*</code> (all possible strings), which is <strong>countably infinite</strong>.
+    </p>
+
+    <h2>Q4: Define Pumping Lemma for CFG</h2>
+    <p>
+        The <strong>Pumping Lemma for Context-Free Grammars</strong> is used to prove that certain languages are not context-free.
+    </p>
+    <p><strong>Statement:</strong></p>
+    <p>
+        For any context-free language <code>L</code>, there exists a number <code>p</code> (pumping length) such that for any string <code>s ∈ L</code>, with <code>|s| ≥ p</code>, we can write:
+        <br>
+        <code>s = uvwxy</code> such that:
+    </p>
+    <ul>
+        <li><code>|vwx| ≤ p</code></li>
+        <li><code>vx ≠ ε</code></li>
+        <li>For all <code>i ≥ 0</code>, the string <code>uv<sup>i</sup>wx<sup>i</sup>y ∈ L</code></li>
+    </ul>
+    <p><strong>Use:</strong> To disprove that a language is context-free by contradiction.</p>
+
+    <h2>Q5: List all Types of Grammar Used in Automata</h2>
+    <p>The grammars are classified based on the <strong>Chomsky Hierarchy</strong>:</p>
+    <table border="1" cellpadding="8" cellspacing="0">
+        <thead>
+            <tr>
+                <th>Type</th>
+                <th>Grammar Name</th>
+                <th>Language Class</th>
+                <th>Machine Equivalent</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Type 0</td>
+                <td>Unrestricted Grammar</td>
+                <td>Recursively Enumerable</td>
+                <td>Turing Machine</td>
+            </tr>
+            <tr>
+                <td>Type 1</td>
+                <td>Context-Sensitive Grammar</td>
+                <td>Context-Sensitive Language</td>
+                <td>Linear Bounded Automaton</td>
+            </tr>
+            <tr>
+                <td>Type 2</td>
+                <td>Context-Free Grammar</td>
+                <td>Context-Free Language</td>
+                <td>Pushdown Automaton</td>
+            </tr>
+            <tr>
+                <td>Type 3</td>
+                <td>Regular Grammar</td>
+                <td>Regular Language</td>
+                <td>Finite Automaton</td>
+	    </tr>
+	</tbody>
+    </table>
+	
   
   </body>
 </html>
