--- a/index.html
+++ b/index.html
@@ -93,47 +93,8 @@
 </head>
 <body>
 
- 🔁 Stack (Last In, First Out — LIFO)
-Think of a stack of plates — you add to the top, and remove from the top.
+ Paste here
 
-The last element added is the first one removed.
-
-✅ Operations:
-push(item) → Add item to top
-
-pop() → Remove item from top
-
-peek() → View top item without removing
-
-🔷 Example:
-If you push 1, 2, 3 → Stack = [1, 2, 3]
-Then pop() → returns 3
-
-🔁 Queue (First In, First Out — FIFO)
-Think of a line at a ticket counter — the first one in line gets served first.
-
-The first element added is the first one removed.
-
-✅ Operations:
-enqueue(item) → Add item to rear
-
-dequeue() → Remove item from front
-
-peek() → View front item without removing
-
-🔷 Example:
-If you enqueue 1, 2, 3 → Queue = [1, 2, 3]
-Then dequeue() → returns 1
-
-🔁 Comparison Table
-Feature	Stack	Queue
-Order	LIFO	FIFO
-Insert	Top (push)	Rear (enqueue)
-Remove	Top (pop)	Front (dequeue)
-Access	Only top item	Only front item
-Real-world Use	Undo operations	Printer jobs, call center
-
-
-
+  
 </body>
 </html>
