--- a/index.html
+++ b/index.html
@@ -384,6 +384,145 @@ Roll: 3 | Name: Charlie | Marks: 75.00
       <li><strong>Structure Passing:</strong> Structures are passed to functions like <code>input()</code>, <code>display()</code>, and <code>insertionSort()</code> by reference (using pointers).</li>
     </ul>
   </div>
+ <h1>SECTION B</h1>
+ 
+  <h1>Q1: Stack Push and Pop Operations</h1>
+
+  <div class="section">
+    <h2>1. Using Array</h2>
+    <pre><code>Initialize top = -1
+Push(x):
+  if top == MAX-1:
+    print "Overflow"
+  else:
+    top = top + 1
+    stack[top] = x
+
+Pop():
+  if top == -1:
+    print "Underflow"
+  else:
+    value = stack[top]
+    top = top - 1
+    return value</code></pre>
+
+    <h2>2. Using Linked List</h2>
+    <pre><code>struct Node {
+  int data;
+  Node *next;
+}
+
+top = NULL;
+
+Push(x):
+  Create new node N
+  N→data = x
+  N→next = top
+  top = N
+
+Pop():
+  if top == NULL:
+    print "Underflow"
+  else:
+    temp = top
+    value = top→data
+    top = top→next
+    free(temp)
+    return value</code></pre>
+  </div>
+
+  <h1>Q2: Binary Search Tree (BST)</h1>
+
+  <div class="section">
+    <h2>a) Constructing BST from: 50, 30, 70, 20, 40, 60, 80</h2>
+    <p>Insert one by one maintaining BST rules: Left &lt; Root &lt; Right</p>
+    <pre>
+           50
+         /    \
+       30      70
+      /  \    /  \
+    20   40  60  80
+    </pre>
+
+    <h2>b) Traversals</h2>
+    <pre>
+Inorder (Left, Root, Right): 20 30 40 50 60 70 80  
+Preorder (Root, Left, Right): 50 30 20 40 70 60 80  
+Postorder (Left, Right, Root): 20 40 30 60 80 70 50
+    </pre>
+  </div>
+
+  <h1>Q3: Real-World Applications of Graphs</h1>
+
+  <div class="section">
+    <h2>a) Social Networks (Friend Suggestions)</h2>
+    <p>
+      Users are nodes, friendships are edges. Graph traversal helps find friends of friends (2nd-degree nodes) for suggestions.
+    </p>
+
+    <h2>b) Navigation Systems (Google Maps)</h2>
+    <p>
+      Locations are nodes, roads are edges with weights. Dijkstra's Algorithm finds shortest path from source to destination.
+    </p>
+
+    <h2>c) Web Page Ranking (PageRank)</h2>
+    <p>
+      Pages are nodes, hyperlinks are edges. PageRank uses graph traversal and weight assignment to rank importance of pages.
+    </p>
+  </div>
+
+  <h1>Q4: Why is Insertion Sort More Efficient than Bubble Sort on Small or Nearly Sorted Arrays?</h1>
+
+  <div class="section">
+    <ul>
+      <li><strong>Insertion Sort:</strong> Efficient for small/nearly sorted arrays because it shifts elements only when needed.</li>
+      <li><strong>Bubble Sort:</strong> Repeatedly swaps adjacent elements regardless of overall sortedness, leading to more operations.</li>
+      <li><strong>Time Complexity:</strong> Best-case for insertion sort is O(n), while bubble sort is always O(n²).</li>
+    </ul>
+  </div>
+
+  <h1>Q5: Binary Tree Traversals</h1>
+
+  <div class="section">
+    <h2>Given Binary Tree:</h2>
+    <pre>
+         10
+        /  \
+       5    15
+      / \     \
+     3   7     20
+    </pre>
+
+    <h2>a) Recursive Traversals</h2>
+    <pre>
+Inorder (Left, Root, Right): 3 5 7 10 15 20  
+Preorder (Root, Left, Right): 10 5 3 7 15 20  
+Postorder (Left, Right, Root): 3 7 5 20 15 10
+    </pre>
+
+    <h2>b) Iterative Inorder Traversal using Stack</h2>
+    <pre><code>struct Node {
+    int data;
+    Node *left, *right;
+};
+
+void inorderIterative(Node* root) {
+    Stack s;
+    Node* current = root;
+
+    while (current != NULL || !s.isEmpty()) {
+        while (current != NULL) {
+            s.push(current);
+            current = current->left;
+        }
+
+        current = s.pop();
+        printf("%d ", current->data);
+        current = current->right;
+    }
+}</code></pre>
+    <p><strong>Output:</strong> 3 5 7 10 15 20</p>
+  </div>
 
   
 </body>
