--- a/index.html
+++ b/index.html
@@ -523,7 +523,36 @@ void inorderIterative(Node* root) {
 }</code></pre>
     <p><strong>Output:</strong> 3 5 7 10 15 20</p>
   </div>
+<h1>BEER PILANA</h1>
+  <h1>SECTION A</h1>
 
-  
+
+  <div class="question">
+    <strong>Q1:</strong> A graph in which each pair of vertices is connected to a unique edge is called a:
+    <div class="answer">➡ <strong>Complete Graph</strong></div>
+  </div>
+
+  <div class="question">
+    <strong>Q2:</strong> Which function is used to dynamically allocate memory for an array in C?
+    <div class="answer">➡ <strong>calloc()</strong></div>
+  </div>
+
+  <div class="question">
+    <strong>Q3:</strong> In a stack implemented using linked list, which operation is used to add an element?
+    <div class="answer">➡ <strong>Push</strong></div>
+  </div>
+
+  <div class="question">
+    <strong>Q4:</strong> The degree of a node in a tree is the number of:
+    <div class="answer">➡ <strong>Children it has</strong></div>
+  </div>
+
+  <div class="question">
+    <strong>Q5:</strong> Which sorting algorithm is most efficient for a nearly sorted array?
+    <div class="answer">➡ <strong>Insertion Sort</strong></div>
+  </div>
+
+</body>
+</html>
 </body>
 </html>
